kubernetes/deploy/traefik-external/dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-external-dashboard
  namespace: traefik-external
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik
      port: 8080
      targetPort: 8080
