kubernetes/deploy/traefik-external/dashboard/dashboard-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-external
  namespace: traefik-external
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`external.traefik.vandeneede.org`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: vandeneede-org-production-tls
